--- a/OnlineStore.Web/Views/_ViewImports.cshtml
+++ b/OnlineStore.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using OnlineStore.Web
-@namespace OnlineStore.Web.Pages
+@using OnlineStore.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
