Actualizacion falta implementar usuario

--- a/OnlineStore.Web/Views/Producto/Index.cshtml
+++ b/OnlineStore.Web/Views/Producto/Index.cshtml
@@ -1,10 +1,10 @@
-﻿﻿@model IEnumerable<OnlineStore.Web.Models.ProductoModel>
+﻿@model IEnumerable<OnlineStore.Web.Models.ProductoModel>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Products</h1>
+<h1>Index</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -21,42 +21,51 @@
             <th>
                 @Html.DisplayNameFor(model => model.descripcion)
             </th>
-           
             <th>
                 @Html.DisplayNameFor(model => model.stock)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.precio)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.urlImagen)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.nombreImagen)
+            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.productoId)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.marca)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.descripcion)
-                </td>
-               
-                <td>
-                    @Html.DisplayFor(modelItem => item.stock)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.precio)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id=item.productoId }) |
-                    @Html.ActionLink("Details", "Details", new {  id=item.productoId  }) |
-                    @Html.ActionLink("Delete", "Delete", new {  id= item.productoId })
-                </td>
-            </tr>
-        }
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.productoId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.marca)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.descripcion)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.stock)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.precio)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.urlImagen)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.nombreImagen)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            </td>
+        </tr>
+}
     </tbody>
 </table>
