--- a/OnlineStore.Web/Views/Producto/Create.cshtml
+++ b/OnlineStore.Web/Views/Producto/Create.cshtml
@@ -1,37 +1,44 @@
-﻿﻿@model OnlineStore.Web.Models.Requests.ProductoSaveRequest
+﻿@model OnlineStore.Web.Models.Requests.ProductoSaveRequest
 
 @{
     ViewData["Title"] = "Create";
 }
 
-<h1>Crear Producto</h1>
+<h1>Create</h1>
 
-
+<h4>ProductoSaveRequest</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="RegisterUser">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-           
-            
             <div class="form-group">
-                <label asp-for="codigoBarra" class="control-label">Codigo Barra</label>
-                <input asp-for="codigoBarra" class="form-control" />
-                <span asp-validation-for="codigoBarra" class="text-danger"></span>
+                <label asp-for="productoId" class="control-label"></label>
+                <input asp-for="productoId" class="form-control" />
+                <span asp-validation-for="productoId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="marca" class="control-label">Marca</label>
+                <label asp-for="idUsuario" class="control-label"></label>
+                <input asp-for="idUsuario" class="form-control" />
+                <span asp-validation-for="idUsuario" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="fecha" class="control-label"></label>
+                <input asp-for="fecha" class="form-control" />
+                <span asp-validation-for="fecha" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="marca" class="control-label"></label>
                 <input asp-for="marca" class="form-control" />
                 <span asp-validation-for="marca" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="descripcion" class="control-label">Descripcion</label>
+                <label asp-for="descripcion" class="control-label"></label>
                 <input asp-for="descripcion" class="form-control" />
                 <span asp-validation-for="descripcion" class="text-danger"></span>
             </div>
-          
             <div class="form-group">
-                <label asp-for="stock" class="control-label">Stock</label>
+                <label asp-for="stock" class="control-label"></label>
                 <input asp-for="stock" class="form-control" />
                 <span asp-validation-for="stock" class="text-danger"></span>
             </div>
