--- a/OnlineStore.Web/Views/Producto/Details.cshtml
+++ b/OnlineStore.Web/Views/Producto/Details.cshtml
@@ -1,4 +1,4 @@
-﻿﻿@model OnlineStore.Web.Models.ProductoModel
+﻿@model OnlineStore.Web.Models.ProductoModel
 
 @{
     ViewData["Title"] = "Details";
@@ -28,7 +28,6 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.descripcion)
         </dd>
-         
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.stock)
         </dt>
@@ -40,6 +39,18 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.precio)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.urlImagen)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.urlImagen)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.nombreImagen)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.nombreImagen)
         </dd>
     </dl>
 </div>
