--- a/OnlineStore.Web/Views/Producto/Edit.cshtml
+++ b/OnlineStore.Web/Views/Producto/Edit.cshtml
@@ -1,22 +1,31 @@
-﻿﻿@model OnlineStore.Web.Models.Requests.ProductoSaveRequest
+﻿@model OnlineStore.Web.Models.Requests.ProductoSaveRequest
 
 @{
     ViewData["Title"] = "Edit";
 }
 
-<h1>Editar producto: @Model.descripcion</h1>
+<h1>Edit</h1>
 
-
+<h4>ProductoSaveRequest</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-             <input type="hidden" asp-for="productoId" />
             <div class="form-group">
-                <label asp-for="codigoBarra" class="control-label"></label>
-                <input asp-for="codigoBarra" class="form-control" />
-                <span asp-validation-for="codigoBarra" class="text-danger"></span>
+                <label asp-for="productoId" class="control-label"></label>
+                <input asp-for="productoId" class="form-control" />
+                <span asp-validation-for="productoId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="idUsuario" class="control-label"></label>
+                <input asp-for="idUsuario" class="form-control" />
+                <span asp-validation-for="idUsuario" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="fecha" class="control-label"></label>
+                <input asp-for="fecha" class="form-control" />
+                <span asp-validation-for="fecha" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="marca" class="control-label"></label>
@@ -28,7 +37,6 @@
                 <input asp-for="descripcion" class="form-control" />
                 <span asp-validation-for="descripcion" class="text-danger"></span>
             </div>
-           
             <div class="form-group">
                 <label asp-for="stock" class="control-label"></label>
                 <input asp-for="stock" class="form-control" />
