--- a/OnlineStore.Web/Views/Producto/Edit.cshtml
+++ b/OnlineStore.Web/Views/Producto/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Editar producto: @Model.descripcion</h1>
 
 <h4>ProductoSaveRequest</h4>
 <hr />
