--- a/OnlineStore.Web/Views/Producto/Index.cshtml
+++ b/OnlineStore.Web/Views/Producto/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Productos</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -37,7 +37,10 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+
+        @foreach (var item in Model)
+
+{
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.productoId)
@@ -61,9 +64,9 @@
                 @Html.DisplayFor(modelItem => item.nombreImagen)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "Edit", new { id=item.productoId }) |
+                @Html.ActionLink("Details", "Details", new { id=item.productoId }) |
+                @Html.ActionLink("Delete", "Delete", new {  id=item.productoId  })
             </td>
         </tr>
 }
