--- a/OnlineStore.Web/Views/Producto/Create.cshtml
+++ b/OnlineStore.Web/Views/Producto/Create.cshtml
@@ -4,13 +4,13 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Crear Producto</h1>
 
-<h4>ProductoSaveRequest</h4>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Registro de Usuario">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="productoId" class="control-label"></label>
